--- a/homework.ipynb
+++ b/homework.ipynb
@@ -2657,27 +2657,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
     "# YOUR CHANGES HERE\n",
     "\n",
-    "p10 = ..."
+    "p10 = q10.join(u10, on=\"b\", how=\"left\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>a</th>\n",
+       "      <th>b</th>\n",
+       "      <th>c</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>333.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>555.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>777.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>8</td>\n",
+       "      <td>10</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>10</td>\n",
+       "      <td>8</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Ellipsis"
+       "    a   b      c\n",
+       "0   1   9    NaN\n",
+       "1   3   3  333.0\n",
+       "2   6   5  555.0\n",
+       "3   2   7  777.0\n",
+       "4   8  10    NaN\n",
+       "5  10   8    NaN"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2688,9 +2759,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6, 6)"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# these row counts should be the same.\n",
     "(len(p10), len(q10)) if p10 is not ... else None"
@@ -2716,20 +2798,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Species\n",
+      "Adelie Penguin (Pygoscelis adeliae)          37.257534\n",
+      "Chinstrap penguin (Pygoscelis antarctica)    46.573529\n",
+      "Gentoo penguin (Pygoscelis papua)            45.563793\n",
+      "Name: Culmen Length (mm), dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "# YOUR CHANGES HERE\n",
     "\n",
-    "p11 = ..."
+    "p11 = penguins.query(\"Sex == 'FEMALE'\").groupby(\"Species\")[\"Culmen Length (mm)\"].mean().idxmax()\n",
+    "print(\n",
+    "    penguins.query(\"Sex == 'FEMALE'\")\n",
+    "    .groupby(\"Species\")[\"Culmen Length (mm)\"]\n",
+    "    .mean()\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Chinstrap penguin (Pygoscelis antarctica)'"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# what could you print earlier to spot check this answer?\n",
     "p11"
