--- a/homework.ipynb
+++ b/homework.ipynb
@@ -2856,20 +2856,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Species\n",
+      "Adelie Penguin (Pygoscelis adeliae)          2\n",
+      "Chinstrap penguin (Pygoscelis antarctica)    1\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "# YOUR CHANGES HERE\n",
     "\n",
-    "p12 = ..."
+    "p12 = penguins[penguins[\"Body Mass (g)\"] < 2900][\"Species\"].value_counts().idxmax()\n",
+    "\n",
+    "print(penguins[penguins[\"Body Mass (g)\"] < 2900][\"Species\"].value_counts())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Adelie Penguin (Pygoscelis adeliae)'"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# what stats could you use to check this answer?\n",
     "\n",
