--- a/homework.ipynb
+++ b/homework.ipynb
@@ -2918,20 +2918,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
     "# YOUR CHANGES HERE\n",
     "\n",
-    "p13 = ..."
+    "counts = penguins[\"Individual ID\"].value_counts()\n",
+    "p13 = counts[counts > 1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Individual ID\n",
+       "N6A1     3\n",
+       "N6A2     3\n",
+       "N13A2    3\n",
+       "N13A1    3\n",
+       "N8A2     3\n",
+       "        ..\n",
+       "N85A2    2\n",
+       "N15A1    2\n",
+       "N15A2    2\n",
+       "N14A2    2\n",
+       "N14A1    2\n",
+       "Name: count, Length: 114, dtype: int64"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# confirm that each row corresponds to an individual penguin,\n",
     "# and the row counts are more than one.\n",
