--- a/homework.ipynb
+++ b/homework.ipynb
@@ -3187,21 +3187,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
     "# YOUR CHANGES HERE\n",
     "\n",
     "def p15(orders_filename, components_filename, costs_filename):\n",
-    "    ..."
+    "    orders = pd.read_csv(orders_filename, sep=\"\\t\")\n",
+    "    components = pd.read_csv(components_filename, sep=\"\\t\")\n",
+    "    costs = pd.read_csv(costs_filename, sep=\"\\t\")\n",
+    "    df_merged = pd.merge(components, costs, on=\"component\")\n",
+    "    df_merged = pd.merge(df_merged, orders, on = \"device\")\n",
+    "    df_merged[\"row_cost\"] = df_merged[\"device_quantity\"] * df_merged[\"component_quantity\"] * df_merged[\"component_cost\"]\n",
+    "    total_cost = df_merged[\"row_cost\"].sum()\n",
+    "    return total_cost"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(767.59)"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# this should return 767.59\n",
     "p15(\"orders_15.tsv\", \"components_15.tsv\", \"costs_15.tsv\")"
