--- a/homework.ipynb
+++ b/homework.ipynb
@@ -3456,21 +3456,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
     "# YOUR CHANGES HERE\n",
     "\n",
     "def p18(file_1_name, file_2_name, file_3_name):\n",
-    "    ..."
+    "    df1 = pd.read_csv(file_1_name, sep=\"\\t\")\n",
+    "    df2 = pd.read_csv(file_2_name, sep=\"\\t\")\n",
+    "    df3 = pd.read_csv(file_3_name, sep=\"\\t\")\n",
+    "    col2 = df2.columns[0]\n",
+    "    col3 = df3.columns[0]\n",
+    "    merged_12 = pd.merge(df1, df2, on=col2, how=\"left\")\n",
+    "    merged_final = pd.merge(merged_12, df3, on=col3, how=\"left\")\n",
+    "    return merged_final"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 155,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>device</th>\n",
+       "      <th>device_quantity</th>\n",
+       "      <th>component</th>\n",
+       "      <th>component_quantity</th>\n",
+       "      <th>component_cost</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>gizmo</td>\n",
+       "      <td>2</td>\n",
+       "      <td>sprocket</td>\n",
+       "      <td>7</td>\n",
+       "      <td>10.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>gizmo</td>\n",
+       "      <td>2</td>\n",
+       "      <td>oilcan</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>gadget</td>\n",
+       "      <td>3</td>\n",
+       "      <td>gear</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0.51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>gadget</td>\n",
+       "      <td>3</td>\n",
+       "      <td>spring</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>widget</td>\n",
+       "      <td>5</td>\n",
+       "      <td>sprocket</td>\n",
+       "      <td>11</td>\n",
+       "      <td>10.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>widget</td>\n",
+       "      <td>5</td>\n",
+       "      <td>spring</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>widget</td>\n",
+       "      <td>5</td>\n",
+       "      <td>bolt</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>widget</td>\n",
+       "      <td>5</td>\n",
+       "      <td>sandpaper</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   device  device_quantity  component  component_quantity  component_cost\n",
+       "0   gizmo                2   sprocket                   7           10.00\n",
+       "1   gizmo                2     oilcan                   2            5.00\n",
+       "2  gadget                3       gear                  13            0.51\n",
+       "3  gadget                3     spring                  17            0.20\n",
+       "4  widget                5   sprocket                  11           10.00\n",
+       "5  widget                5     spring                   4            0.20\n",
+       "6  widget                5       bolt                   5            0.34\n",
+       "7  widget                5  sandpaper                   3            1.00"
+      ]
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# reuse p15 test data - should have no missing data\n",
     "p18(\"orders_15.tsv\", \"components_15.tsv\", \"costs_15.tsv\")"
