--- a/homework.ipynb
+++ b/homework.ipynb
@@ -3616,20 +3616,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 158,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                     Species     Sex  Culmen Length (mm)\n",
+      "0        Adelie Penguin (Pygoscelis adeliae)  FEMALE           37.257534\n",
+      "1        Adelie Penguin (Pygoscelis adeliae)    MALE           40.390411\n",
+      "2  Chinstrap penguin (Pygoscelis antarctica)  FEMALE           46.573529\n",
+      "3  Chinstrap penguin (Pygoscelis antarctica)    MALE           51.094118\n",
+      "4          Gentoo penguin (Pygoscelis papua)       .           44.500000\n",
+      "5          Gentoo penguin (Pygoscelis papua)  FEMALE           45.563793\n",
+      "6          Gentoo penguin (Pygoscelis papua)    MALE           49.473770\n"
+     ]
+    }
+   ],
    "source": [
     "# YOUR CHANGES HERE\n",
     "\n",
-    "p19 = ..."
+    "p19 = penguins.groupby([\"Species\", \"Sex\"], as_index=False)[\"Culmen Length (mm)\"].mean().sort_values(\"Culmen Length (mm)\", ascending=False).head(1)\n",
+    "print (penguins.groupby([\"Species\", \"Sex\"], as_index=False)[\"Culmen Length (mm)\"].mean())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 157,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Species</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Culmen Length (mm)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Chinstrap penguin (Pygoscelis antarctica)</td>\n",
+       "      <td>MALE</td>\n",
+       "      <td>51.094118</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                     Species   Sex  Culmen Length (mm)\n",
+       "3  Chinstrap penguin (Pygoscelis antarctica)  MALE           51.094118"
+      ]
+     },
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# this should just have one row.\n",
     "# is there an intermediate result that you could print earlier to spot check this answer?\n",
