--- a/homework.ipynb
+++ b/homework.ipynb
@@ -3719,7 +3719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3733,14 +3733,14 @@
     "        costs[\"filename\"] = filename\n",
     "        merged = pd.merge(comps, costs, on =\"component\")\n",
     "        total_cost = (merged[\"component_quantity\"] * merged[\"component_cost\"]).sum()\n",
-    "        results.append({\"filename\":filename, \"total_cost\":total_cost})\n",
+    "        results.append({\"filename\":filename, \"cost\":total_cost})\n",
     "    return pd.DataFrame(results)    \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -3765,7 +3765,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>filename</th>\n",
-       "      <th>total_cost</th>\n",
+       "      <th>cost</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -3779,11 +3779,11 @@
        "</div>"
       ],
       "text/plain": [
-       "            filename  total_cost\n",
-       "0  supplier_a_20.tsv        21.0"
+       "            filename  cost\n",
+       "0  supplier_a_20.tsv  21.0"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
