--- a/homework.ipynb
+++ b/homework.ipynb
@@ -1440,27 +1440,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
     "# YOUR CHANGES HERE\n",
     "\n",
-    "p6 = (penguins[\"Body Mass (g)\"] >= 5000).sum()"
+    "p6 = len(penguins[penguins[\"Body Mass (g)\"] >= 5000])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.int64(67)"
+       "67"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
